--- a/picom.conf
+++ b/picom.conf
@@ -27,11 +27,13 @@ rounded-corners-exclude = [
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'Thunderbird'",
+  "class_g = 'Virt-manager'"
 ];
 round-borders = 1;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
+  "class_g = 'Virt-manager'",
 ];
 
 #################################
@@ -99,11 +101,12 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "class_g = 'Conky'",
+  "class_g = 'conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
+  "class_g = 'Virt-manager'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -159,27 +162,28 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.7;
+inactive-opacity = 0.6;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+#frame-opacity = 0.8;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0 
+menu-opacity = 0.8 
 # menu-opacity is depreciated use dropdown-menu and popup-menu instead.
 
 #If using these 2 below change their values in line 510 & 511 aswell
-popup_menu = { opacity = 0.8; }
-dropdown_menu = { opacity = 0.8; }
+popup_menu = { opacity = 0.7; }
+dropdown_menu = { opacity = 0.7; }
 
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+#inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.8;
+active-opacity = 0.75;
+#inactive-opacity = 0.8;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -214,18 +218,26 @@ opacity-rule = [
   "80:class_g     = 'Polybar'",
   "90:class_g     = 'awesome'",
   "70:class_g     = 'Xfce4-panel'",
-  "100:class_g    = 'code-oss'",
+  "94:class_g    = 'Code'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "99:class_g     = 'Google-chrome'",
-  "100:class_g    = 'Thunderbird'"
+  "100:class_g    = 'Thunderbird'",
+  "100:class_g    = 'Virt-manager'",
+  "80:class_g    = 'File-roller'",
+  "85:class_g    = 'fcitx'",
+  "85:class_g    = 'vlc'",
+  "85:class_g    = 'typeeasy.exe'",
+  "100:class_g    = 'Postman'",
+  "95:class_g    = 'obsidian'",
 ];
 
 
 #################################
 #     Background-Blurring       #
+#           背景模糊            #
 #################################
 
 
@@ -264,7 +276,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 7;
+  strength = 3;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -285,7 +297,10 @@ blur-background-exclude = [
   "class_g = 'Peek'",
   "class_g = 'slop'",
   "class_g = 'PPet'",
-  "class_g = 'Conky'",
+  "class_g = 'fcitx'",
+  "class_g = 'conky'",
+  "class_g = 'Virt-manager'",
+  "class_g = 'Plank'",
   "_GTK_FRAME_EXTENTS@:c"
 
 ];
@@ -293,6 +308,7 @@ blur-background-exclude = [
 
 #################################
 #       General Settings        #
+#           全局设置            #
 #################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
@@ -515,6 +531,6 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.7; }
+  dropdown_menu = { opacity = 0.7; }
 };
