--- a/script/.xbindkeysrc
+++ b/script/.xbindkeysrc
@@ -1,36 +1,65 @@
-# For the benefit of emacs users: -*- shell-script -*-
+# For the benefit of emacs users: -_- shell-script -_-
+
 ###########################
-# xbindkeys configuration #
+
+# xbindkeys configuration
+
 ###########################
+
 #
+
 # Version: 1.8.7
+
 #
+
 # If you edit this file, do not forget to uncomment any lines
+
 # that you change.
+
 # The pound(#) symbol may be used anywhere for comments.
+
 #
+
 # To specify a key, you can use 'xbindkeys --key' or
+
 # 'xbindkeys --multikey' and put one of the two lines in this file.
+
 #
+
 # The format of a command line is:
-#    "command to start"
-#       associated key
+
+# "command to start"
+
+# associated key
+
 #
+
 #
+
 # A list of keys is in /usr/include/X11/keysym.h and in
+
 # /usr/include/X11/keysymdef.h
-# The XK_ is not needed.
+
+# The XK\_ is not needed.
+B
 #
+
 # List of modifier:
-#   Release, Control, Shift, Mod1 (Alt), Mod2 (NumLock),
-#   Mod3 (CapsLock), Mod4, Mod5 (Scroll).
+
+# Release, Control, Shift, Mod1 (Alt), Mod2 (NumLock),
+
+# Mod3 (CapsLock), Mod4, Mod5 (Scroll).
+
 #
 
 # The release modifier is not a standard X modifier, but you can
+
 # use it if you want to catch release events instead of press events
 
 # By defaults, xbindkeys does not pay attention with the modifiers
+
 # NumLock, CapsLock and ScrollLock.
+
 # Uncomment the lines above if you want to pay attention to them.
 
 #keystate_numlock = enable
@@ -39,38 +68,54 @@
 
 # Examples of commands:
 
-"xbindkeys_show" 
-  control+shift + q
-
 # set directly keycode (here control + f with my keyboard)
-"xterm"
-  c:41 + m:0x4
+
+# "xterm"
+
+# c:41 + m:0x4
 
 # specify a mouse button
-"xterm"
-  control + b:2
+
+# "xterm"
+
+# control + b:2
 
 #"xterm -geom 50x20+20+20"
-#   Shift+Mod2+alt + s
+
+# Shift+Mod2+alt + s
+
 #
+
 ## set directly keycode (here control+alt+mod2 + f with my keyboard)
+
 #"xterm"
-#  alt + c:0x29 + m:4 + mod2
+
+# alt + c:0x29 + m:4 + mod2
+
 #
-## Control+Shift+a  release event starts rxvt
+
+## Control+Shift+a release event starts rxvt
+
 #"rxvt"
-#  release+control+shift + a
+
+# release+control+shift + a
+
 #
+
 ## Control + mouse button 2 release event starts rxvt
+
 #"rxvt"
-#  Control + b:2 + Release
+
+# Control + b:2 + Release
 
 "xte 'keydown Super_L' 'key Left' 'keyup Super_L'"
-    b:9
+b:9
 
 "xte 'keydown Super_L' 'key Right' 'keyup Super_L'"
-    b:8
+b:8
 
 ##################################
-# End of xbindkeys configuration #
+
+# End of xbindkeys configuration
+
 ##################################
